# FileSort

./: README.md  pyproject.toml
filesort/: __main__.py  config.py  filesort.go  filesort.py  main.py
