[tool.poetry]
name = "filesort"
version = "0.2.0"
description = "A simple Python application designed to automatically organize files within a directory based on their file extensions. "
authors = ["Daniel Lima"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.8.0"
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
